--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "test": "./node_modules/.bin/jest --detectOpenHandles",
+    "test": "./node_modules/.bin/jest",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'"
