--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jest": "^23.5.0",
     "jest-puppeteer": "^3.3.1",
     "prettier": "^1.13.7",
-    "puppeteer": "^1.7.0"
+    "puppeteer": "^1.7.0",
+    "util.promisify": "^1.0.0"
   },
   "repository": {
     "type": "git",
