--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "devDependencies": {
     "jest": "^23.5.0",
     "jest-puppeteer": "^3.3.1",
+    "node-sass": "^4.9.3",
     "prettier": "^1.13.7",
     "puppeteer": "^1.7.0",
+    "sass-loader": "^7.1.0",
     "util.promisify": "^1.0.0"
   },
   "repository": {
