--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.1",
     "gatsby-transformer-sharp": "^2.1.1",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "postcss-import": "^12.0.0",
     "postcss-preset-env": "^6.0.3",
