--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metaterran",
+  "name": "bangladeshihistory/site",
   "description": "A GatsbyJS blog, hosted on Linode, shipped in a Vagrant, built with CircleCI, and tested with Jest BDD.",
   "version": "1.0.0",
   "author": "Sajjad Hossain <sajjad@withpulp.com>",
@@ -35,6 +35,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-text-loop": "^2.2.1",
     "react-typography": "^0.16.13",
     "typeface-merriweather": "0.0.43",
     "typeface-montserrat": "0.0.43",
@@ -47,6 +48,7 @@
     "gh-pages": "^1.2.0",
     "jest": "^23.5.0",
     "jest-puppeteer": "^3.3.1",
+    "jsdom": "^15.2.1",
     "node-sass": "^4.9.3",
     "prettier": "^1.13.7",
     "puppeteer": "^1.7.0",
